--- a/2021-10-20/src/package.json
+++ b/2021-10-20/src/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2021/vue-london/ --out ../../dist/2021/laravel-vue-london",
+    "build": "slidev build --base /2021/vue-london/ --out ../../dist/2021/vue-london",
     "export": "slidev export --dark --output ../2021-10-20-vue-london.pdf"
   }
 }
