--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
+  "packageManager": "pnpm@7.5.1",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build"
   },
   "devDependencies": {
-    "@iconify/json": "^2.0.25",
-    "@slidev/cli": "^0.28.5",
-    "@slidev/theme-default": "^0.21.1",
-    "playwright-chromium": "^1.18.1",
-    "pnpm": "^6.30.0",
+    "@iconify/json": "^2.1.77",
+    "@slidev/cli": "^0.34.3",
+    "@slidev/theme-default": "^0.21.2",
+    "playwright-chromium": "^1.23.2",
+    "pnpm": "^7.5.1",
     "rimraf": "^3.0.2"
   }
 }
