--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "private": true,
-  "packageManager": "pnpm@8.3.1",
+  "type": "module",
+  "packageManager": "pnpm@8.5.1",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "update": "esno scripts/redirects.ts"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.5",
-    "@iconify/json": "^2.2.56",
-    "@slidev/cli": "^0.40.14",
+    "@antfu/eslint-config": "^0.39.1",
+    "@iconify/json": "^2.2.68",
+    "@slidev/cli": "^0.41.1",
     "@slidev/theme-default": "^0.21.2",
-    "eslint": "^8.39.0",
-    "playwright-chromium": "^1.32.3",
-    "pnpm": "^8.3.1",
-    "rimraf": "^5.0.0",
+    "@types/node": "^20.2.3",
+    "eslint": "^8.41.0",
+    "esno": "^0.16.3",
+    "fast-glob": "^3.2.12",
+    "playwright-chromium": "^1.34.0",
+    "pnpm": "^8.5.1",
+    "rimraf": "^5.0.1",
     "typescript": "^5.0.4"
   },
   "eslintConfig": {
