--- a/netlify.toml
+++ b/netlify.toml
@@ -9,9 +9,29 @@
 
 
 [[redirects]]
+  from = "/2021/composable-vue/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2021-04-29/2021-04-29-vueday-en.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2021/composable-vue/src"
+  to = "https://github.com/antfu/talks/tree/main/2021-04-29"
+  status = 302
+
+[[redirects]]
   from = "/2021/composable-vue/*"
   to = "/2021/composable-vue/index.html"
   status = 200
+
+[[redirects]]
+  from = "/2021/vueconf-china/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2021-05-22/2021-05-22-vueconf-china.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2021/vueconf-china/src"
+  to = "https://github.com/antfu/talks/tree/main/2021-05-22"
+  status = 302
 
 [[redirects]]
   from = "/2021/vueconf-china/*"
@@ -19,9 +39,29 @@
   status = 200
 
 [[redirects]]
+  from = "/2021/laravel-vue-taiwan/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2021-10-17/2021-10-17-laravel-vue-taiwan.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2021/laravel-vue-taiwan/src"
+  to = "https://github.com/antfu/talks/tree/main/2021-10-17"
+  status = 302
+
+[[redirects]]
   from = "/2021/laravel-vue-taiwan/*"
   to = "/2021/laravel-vue-taiwan/index.html"
   status = 200
+
+[[redirects]]
+  from = "/2021/vue-london/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2021-10-20/2021-10-20-vue-london.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2021/vue-london/src"
+  to = "https://github.com/antfu/talks/tree/main/2021-10-20"
+  status = 302
 
 [[redirects]]
   from = "/2021/vue-london/*"
@@ -29,9 +69,29 @@
   status = 200
 
 [[redirects]]
+  from = "/2022/vue-nation/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2022-01-26/2022-01-26-vue-nation.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2022/vue-nation/src"
+  to = "https://github.com/antfu/talks/tree/main/2022-01-26"
+  status = 302
+
+[[redirects]]
   from = "/2022/vue-nation/*"
   to = "/2022/vue-nation/index.html"
   status = 200
+
+[[redirects]]
+  from = "/2022/vite-on-demand-dx/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2022-10-11/2022-10-11-vite-on-demand-dx.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2022/vite-on-demand-dx/src"
+  to = "https://github.com/antfu/talks/tree/main/2022-10-11"
+  status = 302
 
 [[redirects]]
   from = "/2022/vite-on-demand-dx/*"
@@ -39,9 +99,29 @@
   status = 200
 
 [[redirects]]
+  from = "/2022/patterns-vueuse/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2022-10-16/2022-10-16-vue-fes-japan-en.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2022/patterns-vueuse/src"
+  to = "https://github.com/antfu/talks/tree/main/2022-10-16"
+  status = 302
+
+[[redirects]]
   from = "/2022/patterns-vueuse/*"
   to = "/2022/patterns-vueuse/index.html"
   status = 200
+
+[[redirects]]
+  from = "/2022/vueuse-best-practice/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2022-12-10/2022-12-10-vueconf-china.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2022/vueuse-best-practice/src"
+  to = "https://github.com/antfu/talks/tree/main/2022-12-10"
+  status = 302
 
 [[redirects]]
   from = "/2022/vueuse-best-practice/*"
@@ -49,14 +129,44 @@
   status = 200
 
 [[redirects]]
+  from = "/2023/nuxt-devtools/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2023-02-09/2023-02-09-nuxt-devtools-en.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2023/nuxt-devtools/src"
+  to = "https://github.com/antfu/talks/tree/main/2023-02-09"
+  status = 302
+
+[[redirects]]
   from = "/2023/nuxt-devtools/*"
   to = "/2023/nuxt-devtools/index.html"
   status = 200
 
 [[redirects]]
+  from = "/2023/github-notifications/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2023-05-17/2023-05-17-github-notifications-en.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2023/github-notifications/src"
+  to = "https://github.com/antfu/talks/tree/main/2023-05-17"
+  status = 302
+
+[[redirects]]
   from = "/2023/github-notifications/*"
   to = "/2023/github-notifications/index.html"
   status = 200
+
+[[redirects]]
+  from = "/2023/nuxt-devtools-strasbourg/pdf"
+  to = "https://github.com/antfu/talks/blob/main/2023-05-25/2023-05-25-nuxt-devtools-strasbourg-en.pdf?raw=true"
+  status = 302
+
+[[redirects]]
+  from = "/2023/nuxt-devtools-strasbourg/src"
+  to = "https://github.com/antfu/talks/tree/main/2023-05-25"
+  status = 302
 
 [[redirects]]
   from = "/2023/nuxt-devtools-strasbourg/*"
