--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.6.0",
+  "packageManager": "pnpm@8.7.1",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
+    "dev": "esno scripts/picker.ts dev --open",
     "lint": "eslint .",
     "update": "esno scripts/redirects.ts"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.3",
-    "@iconify/json": "^2.2.71",
-    "@slidev/cli": "^0.42.1",
+    "@antfu/eslint-config": "^0.41.0",
+    "@iconify/json": "^2.2.110",
+    "@slidev/cli": "0.43.0-beta.7",
     "@slidev/theme-default": "^0.21.2",
-    "@types/node": "^20.2.5",
-    "eslint": "^8.41.0",
-    "esno": "^0.16.3",
-    "fast-glob": "^3.2.12",
-    "playwright-chromium": "^1.34.3",
-    "pnpm": "^8.6.0",
+    "@types/node": "^20.5.9",
+    "@types/prompts": "^2.4.4",
+    "eslint": "^8.48.0",
+    "esno": "^0.17.0",
+    "execa": "^8.0.1",
+    "fast-glob": "^3.3.1",
+    "playwright-chromium": "^1.37.1",
+    "pnpm": "^8.7.1",
+    "prompts": "^2.4.2",
     "rimraf": "^5.0.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.2.2"
   },
   "eslintConfig": {
     "extends": "@antfu"
