--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.10.0",
+  "packageManager": "pnpm@8.10.5",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -9,18 +9,18 @@
     "update": "esno scripts/redirects.ts"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.29",
-    "@iconify/json": "^2.2.134",
-    "@slidev/cli": "^0.43.12",
+    "@antfu/eslint-config": "^1.2.1",
+    "@iconify/json": "^2.2.143",
+    "@slidev/cli": "^0.44.0",
     "@slidev/theme-default": "^0.21.2",
-    "@types/node": "^20.8.9",
-    "@types/prompts": "^2.4.7",
-    "eslint": "^8.52.0",
-    "esno": "^0.17.0",
+    "@types/node": "^20.9.1",
+    "@types/prompts": "^2.4.8",
+    "eslint": "^8.53.0",
+    "esno": "^4.0.0",
     "execa": "^8.0.1",
-    "fast-glob": "^3.3.1",
-    "playwright-chromium": "^1.39.0",
-    "pnpm": "^8.10.0",
+    "fast-glob": "^3.3.2",
+    "playwright-chromium": "^1.40.0",
+    "pnpm": "^8.10.5",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
