--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.15.1",
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -10,19 +10,22 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.4",
-    "@iconify/json": "^2.2.179",
-    "@slidev/cli": "^0.47.3",
+    "@iconify/json": "^2.2.187",
+    "@slidev/cli": "^0.48.0-beta.19",
     "@slidev/theme-default": "^0.25.0",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.11.21",
     "@types/prompts": "^2.4.9",
-    "eslint": "^8.56.0",
+    "@types/seedrandom": "^3.0.8",
+    "eslint": "^8.57.0",
     "esno": "^4.0.0",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "playwright-chromium": "^1.41.2",
-    "pnpm": "^8.15.1",
+    "pnpm": "^8.15.4",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.5",
-    "typescript": "^5.3.3"
+    "seedrandom": "^3.0.5",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.5"
   }
 }
