--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/prompts": "^2.4.9",
     "@types/seedrandom": "^3.0.8",
     "eslint": "^8.57.0",
+    "eslint-plugin-format": "^0.1.0",
     "esno": "^4.7.0",
     "execa": "^8.0.1",
     "fast-glob": "^3.3.2",
     "playwright-chromium": "^1.42.1",
     "pnpm": "^8.15.4",
+    "prettier-plugin-slidev": "^1.0.5",
     "prompts": "^2.4.2",
     "rimraf": "^5.0.5",
     "seedrandom": "^3.0.5",
