--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.0",
     "@iconify/json": "^2.2.190",
-    "@slidev/cli": "^0.48.0-beta.26",
+    "@slidev/cli": "^0.48.1",
     "@slidev/theme-default": "^0.25.0",
     "@types/node": "^20.11.25",
     "@types/prompts": "^2.4.9",
