--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
+
 [build]
 publish = "dist"
 command = "pnpm run build"
@@ -5,6 +6,7 @@ command = "pnpm run build"
 [build.environment]
 NODE_VERSION = "20"
 PLAYWRIGHT_BROWSERS_PATH = "0"
+
 
 [[redirects]]
 from = "/2021/composable-vue/pdf"
@@ -379,6 +381,21 @@ status = 301
 [[redirects]]
 from = "/2024/vue-amsterdam/*"
 to = "/2024/vue-amsterdam/index.html"
+status = 200
+
+[[redirects]]
+from = "/2024/reactparis/src"
+to = "https://github.com/antfu/talks/tree/main/2024-03-22"
+status = 302
+
+[[redirects]]
+from = "2024-03-22"
+to = "https://talks.antfu.me/2024/reactparis/"
+status = 301
+
+[[redirects]]
+from = "/2024/reactparis/*"
+to = "/2024/reactparis/index.html"
 status = 200
 
 [[redirects]]
