--- a/2024-03-22/src/package.json
+++ b/2024-03-22/src/package.json
@@ -5,6 +5,6 @@
   "scripts": {
     "dev": "slidev",
     "build": "slidev build --base /2024/reactparis/ --out ../../dist/2023/reactparis",
-    "export": "slidev export --per-slide --output ../2024-03-22-react-paris-en.pdf"
+    "export": "slidev export --dark --per-slide --output ../2024-03-22-react-paris-en.pdf"
   }
 }
