--- a/netlify.toml
+++ b/netlify.toml
@@ -409,6 +409,31 @@ to = "/2024/reactparis/index.html"
 status = 200
 
 [[redirects]]
+from = "/2024/cityjs-athens/pdf"
+to = "https://github.com/antfu/talks/blob/main/2024-06-08/2024-06-08-cityjs-athens-en.pdf?raw=true"
+status = 302
+
+[[redirects]]
+from = "/2024-06-08/pdf"
+to = "https://github.com/antfu/talks/blob/main/2024-06-08/2024-06-08-cityjs-athens-en.pdf?raw=true"
+status = 302
+
+[[redirects]]
+from = "/2024/cityjs-athens/src"
+to = "https://github.com/antfu/talks/tree/main/2024-06-08"
+status = 302
+
+[[redirects]]
+from = "2024-06-08"
+to = "https://talks.antfu.me/2024/cityjs-athens/"
+status = 301
+
+[[redirects]]
+from = "/2024/cityjs-athens/*"
+to = "/2024/cityjs-athens/index.html"
+status = 200
+
+[[redirects]]
 from = "/"
 to = "https://antfu.me/talks"
 status = 302
