--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.15.5",
+  "packageManager": "pnpm@9.2.0",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -10,27 +10,30 @@
     "update": "esno scripts/redirects.ts"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.9.0",
-    "@iconify/json": "^2.2.195",
-    "@slidev/cli": "^0.48.6",
+    "@antfu/eslint-config": "^2.20.0",
+    "@eslint/config-inspector": "^0.4.10",
+    "@iconify/json": "^2.2.217",
+    "@slidev/cli": "^0.49.10",
+    "@slidev/client": "^0.49.10",
     "@slidev/theme-default": "^0.25.0",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.14.2",
     "@types/prompts": "^2.4.9",
     "@types/seedrandom": "^3.0.8",
-    "eslint": "^8.57.0",
-    "eslint-plugin-format": "^0.1.0",
+    "eslint": "^9.4.0",
+    "eslint-plugin-format": "^0.1.1",
     "esno": "^4.7.0",
-    "execa": "^8.0.1",
+    "execa": "^9.2.0",
     "fast-glob": "^3.3.2",
-    "markdown-it-magic-link": "^0.0.2",
-    "playwright-chromium": "^1.42.1",
-    "pnpm": "^8.15.5",
+    "markdown-it-magic-link": "^0.1.4",
+    "playwright-chromium": "^1.44.1",
+    "pnpm": "^9.2.0",
     "prettier-plugin-slidev": "^1.0.5",
     "prompts": "^2.4.2",
-    "rimraf": "^5.0.5",
+    "rimraf": "^5.0.7",
     "seedrandom": "^3.0.5",
-    "typescript": "^5.4.3",
-    "unocss": "^0.58.6",
-    "vue-tsc": "^2.0.7"
+    "typescript": "^5.4.5",
+    "unocss": "^0.60.4",
+    "vue-router": "^4.3.2",
+    "vue-tsc": "^2.0.19"
   }
 }
