--- a/2024-07-06/src/package.json
+++ b/2024-07-06/src/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "slidev",
     "build": "slidev build --base /2024/vueconf-shenzhen/ --out ../../dist/2024/vueconf-shenzhen",
-    "export": "slidev export --per-slide --output ../2024-07-06-vueconf-shenzhen-zh.pdf",
-    "prepare": "esno scripts/prepare.ts"
+    "export": "slidev export --per-slide --output ../2024-07-06-vueconf-shenzhen-zh.pdf"
   },
   "devDependencies": {
     "chroma-js": "^2.4.2",
