--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.5.0",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -11,9 +11,9 @@
     "prepare": "git submodule update --init --recursive"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.2",
+    "@antfu/eslint-config": "^2.22.0",
     "@eslint/config-inspector": "^0.5.1",
-    "@iconify/json": "^2.2.225",
+    "@iconify/json": "^2.2.226",
     "@slidev/cli": "^0.49.16",
     "@slidev/client": "^0.49.16",
     "@slidev/theme-default": "^0.25.0",
@@ -27,13 +27,14 @@
     "fast-glob": "^3.3.2",
     "markdown-it-magic-link": "^0.1.4",
     "playwright-chromium": "^1.45.1",
-    "pnpm": "^9.4.0",
+    "pnpm": "^9.5.0",
     "prettier-plugin-slidev": "^1.0.5",
     "prompts": "^2.4.2",
-    "rimraf": "^5.0.7",
+    "rimraf": "^6.0.1",
     "seedrandom": "^3.0.5",
+    "taze": "^0.14.2",
     "typescript": "^5.5.3",
-    "unocss": "^0.61.2",
+    "unocss": "^0.61.3",
     "vue-router": "^4.4.0",
     "vue-tsc": "^2.0.26"
   }
