chore: use pnpm catalogs

--- a/2024-07-06/src/package.json
+++ b/2024-07-06/src/package.json
@@ -8,8 +8,8 @@
     "export": "slidev export --per-slide --output ../2024-07-06-vueconf-shenzhen-zh.pdf"
   },
   "devDependencies": {
-    "chroma-js": "^3.0.0",
-    "vis-data": "^7.1.9",
-    "vis-network": "^9.1.9"
+    "chroma-js": "catalog:",
+    "vis-data": "catalog:",
+    "vis-network": "catalog:"
   }
 }
