--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.10.0",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -11,31 +11,31 @@
     "prepare": "git submodule update --init --recursive"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.0.0",
-    "@eslint/config-inspector": "^0.5.4",
-    "@iconify/json": "^2.2.242",
-    "@slidev/cli": "^0.49.29",
-    "@slidev/client": "^0.49.29",
-    "@slidev/theme-default": "^0.25.0",
-    "@types/node": "^22.5.1",
-    "@types/prompts": "^2.4.9",
-    "@types/seedrandom": "^3.0.8",
-    "eslint": "^9.9.1",
-    "eslint-plugin-format": "^0.1.2",
-    "esno": "^4.7.0",
-    "execa": "^9.3.1",
-    "fast-glob": "^3.3.2",
-    "markdown-it-magic-link": "^0.1.4",
-    "playwright-chromium": "^1.46.1",
-    "pnpm": "^9.9.0",
-    "prettier-plugin-slidev": "^1.0.5",
-    "prompts": "^2.4.2",
-    "rimraf": "^6.0.1",
-    "seedrandom": "^3.0.5",
-    "taze": "^0.16.7",
-    "typescript": "^5.5.4",
-    "unocss": "^0.62.3",
-    "vue-router": "^4.4.3",
-    "vue-tsc": "^2.1.2"
+    "@antfu/eslint-config": "catalog:",
+    "@eslint/config-inspector": "catalog:",
+    "@iconify/json": "catalog:",
+    "@slidev/cli": "catalog:",
+    "@slidev/client": "catalog:",
+    "@slidev/theme-default": "catalog:",
+    "@types/node": "catalog:",
+    "@types/prompts": "catalog:",
+    "@types/seedrandom": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-format": "catalog:",
+    "esno": "catalog:",
+    "execa": "catalog:",
+    "fast-glob": "catalog:",
+    "markdown-it-magic-link": "catalog:",
+    "playwright-chromium": "catalog:",
+    "pnpm": "catalog:",
+    "prettier-plugin-slidev": "catalog:",
+    "prompts": "catalog:",
+    "rimraf": "catalog:",
+    "seedrandom": "catalog:",
+    "taze": "catalog:",
+    "typescript": "catalog:",
+    "unocss": "catalog:",
+    "vue-router": "catalog:",
+    "vue-tsc": "catalog:"
   }
 }
