--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,33 @@
 packages:
-  - '*/src'
+  - "*/src"
+catalog:
+  "@antfu/eslint-config": ^3.5.1
+  "@eslint/config-inspector": ^0.5.4
+  "@iconify/json": ^2.2.246
+  "@slidev/cli": ^0.49.29
+  "@slidev/client": ^0.49.29
+  "@slidev/theme-default": ^0.25.0
+  "@types/node": ^22.5.4
+  "@types/prompts": ^2.4.9
+  "@types/seedrandom": ^3.0.8
+  chroma-js: ^3.1.1
+  eslint: ^9.10.0
+  eslint-plugin-format: ^0.1.2
+  esno: ^4.7.0
+  execa: ^9.3.1
+  fast-glob: ^3.3.2
+  markdown-it-magic-link: ^0.1.4
+  playwright-chromium: ^1.47.0
+  pnpm: ^9.10.0
+  prettier-plugin-slidev: ^1.0.5
+  prompts: ^2.4.2
+  rimraf: ^6.0.1
+  seedrandom: ^3.0.5
+  taze: ^0.16.7
+  typescript: ^5.6.2
+  unocss: ^0.62.3
+  vis-data: ^7.1.9
+  vis-network: ^9.1.9
+  vis-timeline: ^7.7.3
+  vue-router: ^4.4.3
+  vue-tsc: ^2.1.6
