--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.10.0",
+  "packageManager": "pnpm@9.11.0",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
     "@eslint/config-inspector": "catalog:",
+    "@iconify/collections": "catalog:",
     "@iconify/json": "catalog:",
     "@slidev/cli": "catalog:",
     "@slidev/client": "catalog:",
@@ -20,6 +21,7 @@
     "@types/node": "catalog:",
     "@types/prompts": "catalog:",
     "@types/seedrandom": "catalog:",
+    "chroma-js": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-format": "catalog:",
     "esno": "catalog:",
@@ -32,9 +34,12 @@
     "prompts": "catalog:",
     "rimraf": "catalog:",
     "seedrandom": "catalog:",
+    "slidev-addon-graph": "catalog:",
     "taze": "catalog:",
     "typescript": "catalog:",
     "unocss": "catalog:",
+    "vis-data": "catalog:",
+    "vis-network": "catalog:",
     "vue-router": "catalog:",
     "vue-tsc": "catalog:"
   }
