--- a/2024-12-16/src/package.json
+++ b/2024-12-16/src/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "npx @eslint/config-inspector --config=eslint.demo.config.ts --no-open & slidev",
-    "build": "slidev build --base /2024/jsnation/ --out ../../dist/2024/jsnation",
-    "export": "slidev export --per-slide --output ../2024-06-13-jsnation-en.pdf"
+    "dev": "kill -9 $(lsof -ti:7777) && npx @eslint/config-inspector --config=eslint.demo.config.ts --no-open --port=7777 & slidev",
+    "build": "slidev build --base /2024/react-day-berlin/ --out ../../dist/2024/react-day-berlin",
+    "export": "slidev export --per-slide --output ../2024-12-16-react-day-berlin-en.pdf"
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
