--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@9.14.4",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
+    "@eslint-react/eslint-plugin": "^1.17.3",
     "@eslint/config-inspector": "catalog:",
     "@iconify/collections": "catalog:",
     "@iconify/json": "catalog:",
@@ -24,6 +25,8 @@
     "chroma-js": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-format": "catalog:",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "esno": "catalog:",
     "execa": "catalog:",
     "fast-glob": "catalog:",
@@ -38,6 +41,7 @@
     "taze": "catalog:",
     "typescript": "catalog:",
     "unocss": "catalog:",
+    "uqr": "^0.1.2",
     "vis-data": "catalog:",
     "vis-network": "catalog:",
     "vue-router": "catalog:",
