--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,12 +1,12 @@
 packages:
   - '*/src'
 catalog:
-  '@antfu/eslint-config': ^3.12.0
+  '@antfu/eslint-config': ^3.12.1
   '@eslint/config-inspector': ^0.6.0
-  '@iconify/collections': ^1.0.497
-  '@iconify/json': ^2.2.286
-  '@slidev/cli': ^0.50.0
-  '@slidev/client': ^0.50.0
+  '@iconify/collections': ^1.0.500
+  '@iconify/json': ^2.2.289
+  '@slidev/cli': ^0.51.0-beta.1
+  '@slidev/client': ^0.51.0-beta.1
   '@slidev/theme-default': ^0.25.0
   '@types/node': ^22.10.2
   '@types/prompts': ^2.4.9
@@ -27,9 +27,9 @@ catalog:
   slidev-addon-graph: ^0.1.0
   taze: ^0.18.0
   typescript: ^5.7.2
-  unocss: ^0.65.2
+  unocss: ^0.65.3
   vis-data: ^7.1.9
   vis-network: ^9.1.9
   vis-timeline: ^7.7.3
   vue-router: ^4.5.0
-  vue-tsc: ^2.1.10
+  vue-tsc: ^2.2.0
