--- a/2024-12-28/src/package.json
+++ b/2024-12-28/src/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "kill -9 $(lsof -ti:7777); npx @eslint/config-inspector --config=eslint.demo.config.ts --no-open & slidev",
     "build": "slidev build --base /2024/webconf-tw/ --out ../../dist/2024/webconf-tw",
-    "export": "slidev export --per-slide --output ../2024-12-28-webconf-tw-zh.pdf"
+    "export": "npx @eslint/config-inspector --config=eslint.demo.config.ts --no-open & slidev export --per-slide --output ../2024-12-28-webconf-tw-zh.pdf"
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
