--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@9.15.1",
+  "packageManager": "pnpm@10.4.1",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
     "dev": "esno scripts/picker.ts dev --open",
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "catalog:",
-    "@eslint-react/eslint-plugin": "^1.22.1",
+    "@eslint-react/eslint-plugin": "catalog:",
     "@eslint/config-inspector": "catalog:",
     "@iconify/collections": "catalog:",
     "@iconify/json": "catalog:",
@@ -25,8 +25,8 @@
     "chroma-js": "catalog:",
     "eslint": "catalog:",
     "eslint-plugin-format": "catalog:",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-react-hooks": "catalog:",
+    "eslint-plugin-react-refresh": "catalog:",
     "esno": "catalog:",
     "execa": "catalog:",
     "fast-glob": "catalog:",
@@ -41,7 +41,7 @@
     "taze": "catalog:",
     "typescript": "catalog:",
     "unocss": "catalog:",
-    "uqr": "^0.1.2",
+    "uqr": "catalog:",
     "vis-data": "catalog:",
     "vis-network": "catalog:",
     "vue-router": "catalog:",
