--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,35 +1,39 @@
 packages:
   - '*/src'
 catalog:
-  '@antfu/eslint-config': ^3.12.1
-  '@eslint/config-inspector': ^0.6.0
-  '@iconify/collections': ^1.0.500
-  '@iconify/json': ^2.2.289
-  '@slidev/cli': ^0.51.0-beta.4
-  '@slidev/client': ^0.51.0-beta.4
+  '@antfu/eslint-config': ^4.2.1
+  '@eslint-react/eslint-plugin': ^1.26.2
+  '@eslint/config-inspector': ^1.0.0
+  '@iconify/collections': ^1.0.518
+  '@iconify/json': ^2.2.307
+  '@slidev/cli': ^51.1.2
+  '@slidev/client': ^51.1.2
   '@slidev/theme-default': ^0.25.0
-  '@types/node': ^22.10.2
+  '@types/node': ^22.13.4
   '@types/prompts': ^2.4.9
   '@types/seedrandom': ^3.0.8
   chroma-js: ^3.1.2
-  eslint: ^9.17.0
-  eslint-plugin-format: ^0.1.3
+  eslint: ^9.20.1
+  eslint-plugin-format: ^1.0.1
+  eslint-plugin-react-hooks: ^5.1.0
+  eslint-plugin-react-refresh: ^0.4.19
   esno: ^4.8.0
   execa: ^9.5.2
-  fast-glob: ^3.3.2
+  fast-glob: ^3.3.3
   markdown-it-magic-link: ^0.1.4
-  playwright-chromium: ^1.49.1
-  pnpm: ^9.15.1
+  playwright-chromium: ^1.50.1
+  pnpm: ^10.4.1
   prettier-plugin-slidev: ^1.0.5
   prompts: ^2.4.2
   rimraf: ^6.0.1
   seedrandom: ^3.0.5
   slidev-addon-graph: ^0.1.0
-  taze: ^0.18.0
-  typescript: ^5.7.2
-  unocss: ^0.65.3
+  taze: ^18.6.0
+  typescript: ^5.7.3
+  unocss: ^65.5.0
+  uqr: ^0.1.2
   vis-data: ^7.1.9
   vis-network: ^9.1.9
   vis-timeline: ^7.7.3
   vue-router: ^4.5.0
-  vue-tsc: ^2.2.0
+  vue-tsc: ^2.2.2
