--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,7 @@ catalog:
   '@types/seedrandom': ^3.0.8
   chroma-js: ^3.1.2
   eslint: ^9.20.1
+  eslint-config-flat-gitignore: ^2.1.0
   eslint-plugin-format: ^1.0.1
   eslint-plugin-react-hooks: ^5.1.0
   eslint-plugin-react-refresh: ^0.4.19
