--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,40 +1,44 @@
 packages:
   - '*/src'
 catalog:
-  '@antfu/eslint-config': ^4.2.1
-  '@eslint-react/eslint-plugin': ^1.26.2
-  '@eslint/config-inspector': ^1.0.0
-  '@iconify/collections': ^1.0.518
-  '@iconify/json': ^2.2.307
-  '@slidev/cli': ^51.1.2
-  '@slidev/client': ^51.1.2
+  '@antfu/eslint-config': ^4.13.0
+  '@eslint-react/eslint-plugin': ^1.49.0
+  '@eslint/config-inspector': ^1.0.2
+  '@iconify/collections': ^1.0.547
+  '@iconify/json': ^2.2.337
+  '@slidev/cli': ^51.6.0
+  '@slidev/client': ^51.6.0
   '@slidev/theme-default': ^0.25.0
-  '@types/node': ^22.13.4
+  '@types/node': ^22.15.17
   '@types/prompts': ^2.4.9
   '@types/seedrandom': ^3.0.8
   chroma-js: ^3.1.2
-  eslint: ^9.20.1
+  eslint: ^9.26.0
   eslint-config-flat-gitignore: ^2.1.0
   eslint-plugin-format: ^1.0.1
-  eslint-plugin-react-hooks: ^5.1.0
-  eslint-plugin-react-refresh: ^0.4.19
+  eslint-plugin-react-hooks: ^5.2.0
+  eslint-plugin-react-refresh: ^0.4.20
   esno: ^4.8.0
-  execa: ^9.5.2
+  execa: ^9.5.3
   fast-glob: ^3.3.3
   markdown-it-magic-link: ^0.1.4
-  playwright-chromium: ^1.50.1
-  pnpm: ^10.4.1
+  playwright-chromium: ^1.52.0
+  pnpm: ^10.10.0
   prettier-plugin-slidev: ^1.0.5
   prompts: ^2.4.2
   rimraf: ^6.0.1
   seedrandom: ^3.0.5
   slidev-addon-graph: ^0.1.0
-  taze: ^18.6.0
-  typescript: ^5.7.3
-  unocss: ^65.5.0
+  taze: ^18.7.1
+  typescript: ^5.8.3
+  unocss: ^66.1.1
   uqr: ^0.1.2
   vis-data: ^7.1.9
-  vis-network: ^9.1.9
-  vis-timeline: ^7.7.3
-  vue-router: ^4.5.0
-  vue-tsc: ^2.2.2
+  vis-network: ^9.1.10
+  vis-timeline: ^7.7.4
+  vue-router: ^4.5.1
+  vue-tsc: ^2.2.10
+onlyBuiltDependencies:
+  - esbuild
+  - playwright-chromium
+  - unrs-resolver
