--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,19 +1,19 @@
 packages:
   - '*/src'
 catalog:
-  '@antfu/eslint-config': ^4.14.1
+  '@antfu/eslint-config': ^4.16.1
   '@eslint-react/eslint-plugin': ^1.52.2
   '@eslint/config-inspector': ^1.1.0
-  '@iconify/collections': ^1.0.558
-  '@iconify/json': ^2.2.348
-  '@slidev/cli': ^51.8.1
+  '@iconify/collections': ^1.0.561
+  '@iconify/json': ^2.2.351
+  '@slidev/cli': ^51.8.2
   '@slidev/client': ^51.8.2
   '@slidev/theme-default': ^0.25.0
-  '@types/node': ^24.0.1
+  '@types/node': ^24.0.3
   '@types/prompts': ^2.4.9
   '@types/seedrandom': ^3.0.8
   chroma-js: ^3.1.2
-  eslint: ^9.28.0
+  eslint: ^9.29.0
   eslint-config-flat-gitignore: ^2.1.0
   eslint-plugin-format: ^1.0.1
   eslint-plugin-react-hooks: ^5.2.0
@@ -23,8 +23,8 @@ catalog:
   execa: ^9.6.0
   fast-glob: ^3.3.3
   markdown-it-magic-link: ^0.1.4
-  playwright-chromium: ^1.53.0
-  pnpm: ^10.12.1
+  playwright-chromium: ^1.53.1
+  pnpm: ^10.12.2
   prettier-plugin-slidev: ^1.0.5
   prompts: ^2.4.2
   rimraf: ^6.0.1
@@ -32,11 +32,12 @@ catalog:
   slidev-addon-graph: ^0.1.1
   taze: ^19.1.0
   typescript: ^5.8.3
-  unocss: ^66.2.0
+  unocss: ^66.2.3
   uqr: ^0.1.2
   vis-data: ^7.1.9
   vis-network: ^9.1.12
   vis-timeline: ^7.7.4
+  vite: ^6.3.5
   vue-router: ^4.5.1
   vue-tsc: ^2.2.10
 onlyBuiltDependencies:
