--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
+
 [build]
 publish = "dist"
 command = "pnpm run build"
@@ -5,6 +6,7 @@ command = "pnpm run build"
 [build.environment]
 NODE_VERSION = "22"
 PLAYWRIGHT_BROWSERS_PATH = "0"
+
 
 [[redirects]]
 from = "/2021/composable-vue/pdf"
@@ -734,6 +736,31 @@ status = 301
 [[redirects]]
 from = "/2025/v-tokyo/*"
 to = "/2025/v-tokyo/index.html"
+status = 200
+
+[[redirects]]
+from = "/2025/vueconf/pdf"
+to = "https://github.com/antfu/talks/blob/main/2025-07-12/2025-07-12-vueconf-zh.pdf?raw=true"
+status = 302
+
+[[redirects]]
+from = "/2025-07-12/pdf"
+to = "https://github.com/antfu/talks/blob/main/2025-07-12/2025-07-12-vueconf-zh.pdf?raw=true"
+status = 302
+
+[[redirects]]
+from = "/2025/vueconf/src"
+to = "https://github.com/antfu/talks/tree/main/2025-07-12"
+status = 302
+
+[[redirects]]
+from = "2025-07-12"
+to = "https://talks.antfu.me/2025/vueconf/"
+status = 301
+
+[[redirects]]
+from = "/2025/vueconf/*"
+to = "/2025/vueconf/index.html"
 status = 200
 
 [[redirects]]
