--- a/2025-07-12/src/package.json
+++ b/2025-07-12/src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "slidev",
-    "build": "slidev build --base /2025/vueconf/ --out ../../dist/2025/vueconf",
+    "build": "slidev build --base /2025/vueconf-china/ --out ../../dist/2025/vueconf-china",
     "export": "slidev export --per-slide --output ../2025-07-12-vueconf-zh.pdf"
   },
   "devDependencies": {
