--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "build": "rimraf dist && pnpm -r run build",
-    "dev": "esno scripts/picker.ts dev --open",
+    "dev": "tsx scripts/picker.ts dev --open",
     "typecheck": "vue-tsc --noEmit",
     "lint": "eslint .",
-    "update": "esno scripts/redirects.ts",
+    "update": "tsx scripts/redirects.ts",
     "prepare": "git submodule update --init --recursive"
   },
   "devDependencies": {
@@ -29,7 +29,6 @@
     "eslint-plugin-react-hooks": "catalog:",
     "eslint-plugin-react-refresh": "catalog:",
     "eslint-typegen": "catalog:",
-    "esno": "catalog:",
     "execa": "catalog:",
     "fast-glob": "catalog:",
     "markdown-it-magic-link": "catalog:",
@@ -41,6 +40,7 @@
     "seedrandom": "catalog:",
     "slidev-addon-graph": "catalog:",
     "taze": "catalog:",
+    "tsx": "catalog:",
     "typescript": "catalog:",
     "unocss": "catalog:",
     "uqr": "catalog:",
