--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,15 +1,15 @@
 packages:
   - '*/src'
 catalog:
-  '@antfu/eslint-config': ^5.0.0
+  '@antfu/eslint-config': ^5.1.0
   '@eslint-react/eslint-plugin': ^1.52.3
   '@eslint/config-inspector': ^1.1.0
-  '@iconify/collections': ^1.0.574
-  '@iconify/json': ^2.2.364
+  '@iconify/collections': ^1.0.576
+  '@iconify/json': ^2.2.366
   '@slidev/cli': ^52.1.0
   '@slidev/client': ^52.1.0
   '@slidev/theme-default': ^0.25.0
-  '@types/node': ^24.1.0
+  '@types/node': ^24.2.0
   '@types/prompts': ^2.4.9
   '@types/seedrandom': ^3.0.8
   chroma-js: ^3.1.2
@@ -19,27 +19,27 @@ catalog:
   eslint-plugin-react-hooks: ^5.2.0
   eslint-plugin-react-refresh: ^0.4.20
   eslint-typegen: ^2.3.0
-  esno: ^4.8.0
   execa: ^9.6.0
   fast-glob: ^3.3.3
   markdown-it-magic-link: ^0.1.4
-  playwright-chromium: ^1.54.1
-  pnpm: ^10.13.1
+  playwright-chromium: ^1.54.2
+  pnpm: ^10.14.0
   prettier-plugin-slidev: ^1.0.5
   prompts: ^2.4.2
   rimraf: ^6.0.1
   seedrandom: ^3.0.5
-  slidev-addon-graph: ^0.1.1
+  slidev-addon-graph: ^1.0.0
   taze: ^19.1.0
-  typescript: ^5.8.3
-  unocss: ^66.3.3
+  tsx: ^4.20.3
+  typescript: ^5.9.2
+  unocss: ^66.4.1
   uqr: ^0.1.2
-  vis-data: ^7.1.10
-  vis-network: ^9.1.13
-  vis-timeline: ^7.7.4
+  vis-data: ^8.0.1
+  vis-network: ^10.0.1
+  vis-timeline: ^8.2.1
   vite: ^7.0.6
   vue-router: ^4.5.1
-  vue-tsc: ^3.0.4
+  vue-tsc: ^3.0.5
 onlyBuiltDependencies:
   - esbuild
   - playwright-chromium
