--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,6 @@
 [submodule "2024-12-21/src/yak-shaving-map"]
 	path = 2024-12-21/src/yak-shaving-map
 	url = https://github.com/antfu/yak-shaving-map
+[submodule "2025-08-10/src/yak-shaving-map"]
+	path = 2025-08-10/src/yak-shaving-map
+	url = https://github.com/antfu/yak-shaving-map
